# consume-indy-crate

./: .gitignore  Cargo.toml
dbjs/: index.js  package-lock.json  package.json
src/: libindy_async.rs  libindy_ffi.rs  main.rs
src/pgwallet/: wallet_plugin_loader.rs
src/utils/: config_env.rs  logger.rs  mod.rs
